# canchaya

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_booking_exclude_constraint.py
app/: enums.py  main.py
app/api/: deps.py
app/api/routes/: auth.py  bookings.py  courts.py  venues.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  availability.py  booking.py  court.py  payment.py  refresh_token.py  user.py  venue.py
app/schemas/: auth.py  booking.py  court.py  user.py  venue.py
app/services/: booking_service.py
scripts/: seed.py
tests/: conftest.py  test_auth.py  test_availability.py  test_bookings_concurrency.py  test_bookings_lifecycle.py  test_bookings_overlap.py  test_rbac.py
