[project]
name = "canchaya"
version = "0.1.0"
description = "API de reservas de canchas de futbol con rigor profesional (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.2",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# ---- Tooling -------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
# Las migraciones de Alembic son autogeneradas: no se formatean a mano.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, B bugbear, UP pyupgrade, C4 comprehensions
select = ["E", "W", "F", "I", "B", "UP", "C4"]
# B008: FastAPI usa Depends() en defaults a proposito.
# UP042: preferimos el patron explicito (str, Enum) sobre StrEnum por claridad.
ignore = ["B008", "UP042"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "alembic/*"]
